Refactoring Opening Hours tests wherein method retrieveRule() was changed to make the code more effective.